@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(SecureServ.c)
 AC_CONFIG_HEADER(modconfig.h)
 PACKAGE=SecureServ
-VERSION=0.9
+VERSION=0.9.1
 DIRINST=~/NeoStats/
 AC_PREFIX_DEFAULT(~/NeoStats/)
 CFLAGS="$CFLAGS -O2 -Wall"
@@ -10,6 +10,9 @@ CFLAGS="$CFLAGS -O2 -Wall"
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL 
+
+echo "If the following check can't find libpcre, see
+http://www.neostats.net/boards/viewtopic.php?t=463"
 AC_CHECK_LIB(pcre, pcre_compile,
 [CFLAGS="$CFLAGS `pcre-config --cflags`" LDFLAGS="$LDFLAGS `pcre-config --libs`"],
 [AC_MSG_ERROR(This program required libpcre.)])
@@ -50,7 +53,7 @@ int main(void) {
 if test "$ns_version_ok" = "yes"; then
 	AC_MSG_RESULT(Compatible Version);
 else
-	AC_MSG_ERROR(This Module requires NeoStats 2.5.2 or Higher)
+	AC_MSG_ERROR(This Module requires NeoStats 2.5.3 or Higher)
 fi
 
 dnl check if we are running with Debug....
