@@ -1,3 +1,25 @@
+/* NeoStats - IRC Statistical Services Copyright 
+** Copyright (c) 1999-2003 Justin Hammond
+** http://www.neostats.net/
+**
+**  This program is free software; you can redistribute it and/or modify
+**  it under the terms of the GNU General Public License as published by
+**  the Free Software Foundation; either version 2 of the License, or
+**  (at your option) any later version.
+**
+**  This program is distributed in the hope that it will be useful,
+**  but WITHOUT ANY WARRANTY; without even the implied warranty of
+**  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+**  GNU General Public License for more details.
+**
+**  You should have received a copy of the GNU General Public License
+**  along with this program; if not, write to the Free Software
+**  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307
+**  USA
+**
+** NeoStats CVS Identification
+** $Id: http.c,v 1.6 2003/05/28 12:55:42 fishwaldo Exp $
+*/
 /***************************************************************************
  *
  *     Library: libhttp
@@ -568,7 +590,7 @@ extern int http_write(int socknum, char *sockname) {
                                             //  and/or if the data is encoded. ajd 8/28/2001
             sprintf( szContent, "%s%d\r\n", "Content-Length: ", strlen( pContent ) );
             strcat( hd->pRequest, szContent );
-            strcat( hd->pRequest, "User-Agent: SecureServ/0.5\r\n" );
+            strcat( hd->pRequest, "User-Agent: SecureServ/0.9.1\r\n" );
             strcat( hd->pRequest, "Pragma: no-cache\r\n" );
             strcat( hd->pRequest, "Accept: */*\r\n\r\n" );
             strcat( hd->pRequest, pContent );
@@ -577,7 +599,7 @@ extern int http_write(int socknum, char *sockname) {
         case kHMethodHead:
         {
             sprintf( hd->pRequest, "HEAD %s HTTP/1.0\r\nHost: %s\r\n", hd->path, HTTPHOST );
-            strcat( hd->pRequest, "User-Agent: SecureServ/0.5\r\n" );
+            strcat( hd->pRequest, "User-Agent: SecureServ/0.9.1\r\n" );
             strcat( hd->pRequest, "Pragma: no-cache\r\n" );
             strcat( hd->pRequest, "Accept: */*\r\n\r\n" );
             break;
@@ -589,7 +611,7 @@ extern int http_write(int socknum, char *sockname) {
                                             //  as that was preventing some servers
                                             //  from responding properly.
             sprintf( hd->pRequest, "GET %s HTTP/1.0\r\nHost: %s\r\n", hd->path, HTTPHOST );
-            strcat( hd->pRequest, "User-Agent: SecureServ/0.5\r\n" );
+            strcat( hd->pRequest, "User-Agent: SecureServ/0.9.1\r\n" );
             strcat( hd->pRequest, "Pragma: no-cache\r\n" );
             strcat( hd->pRequest, "Accept: */*\r\n\r\n" );
             break;
